--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -157,6 +157,10 @@ h4 {
   padding: 2em 1em;
 }
 
+.page-content .page-heading {
+  text-align: center;
+}
+
 .page-heading {
   color: var(--color-heading-primary);
   font-size: 2em;
@@ -504,6 +508,68 @@ h4 {
   width: max-content;
 }
 
+/* ---------- REMOVE PAGE STYLES ---------- */
+
+#remove-product-form .pr-item {
+  background-color: var(--color-bg-primary);
+  border-radius: 10px;
+  box-shadow: 0 0 8px 0 rgba(100,100,100,.15);
+  margin-bottom: 1em;
+  padding: 1em;
+
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
+#remove-product-form .pr-item .error-message{
+  color: #ED4337;
+  margin-bottom: 0.5em;
+}
+
+#remove-product-form .pr-delete-btn {
+  justify-self: flex-end;
+}
+
+#remove-product-form .pr-delete-btn .icon {
+  width: 1.5em;
+}
+
+#remove-product-form .pr-item .form-field {
+  margin-bottom: 1em;
+}
+
+#remove-product-form .pr-item .pr-code-field {
+  max-width: 400px;
+}
+
+#remove-product-form .pr-item .pr-amount-field {
+  max-width: 170px;
+}
+
+#remove-product-form #new-btn {
+  color: var(--color-heading-primary);
+  font-size: 1.2em;
+  font-weight: 600;
+  margin: 0.5em 0 1em;
+  
+}
+
+#remove-product-submit-btn {
+  background-color: var(--color-btn-primary);
+  color: var(--color-btn-secondary);
+  font-weight: 600;
+  margin: 1em auto;
+  padding: 1em 2em;
+
+  width: 80%;
+  max-width: 475px;
+}
+
+#remove-product-submit-btn.sending {
+  background-color: limegreen;
+}
+
+
 
 
 @media screen and (min-width: 26.875em) { /* 430px/16px */
@@ -597,6 +663,28 @@ h4 {
     grid-row: 2;
   }
 
+  /* ---------- REMOVE PRODUCT PAGE STYLES ---------- */
+
+  #remove-product-form .pr-item {
+    grid-template-columns: max-content 1fr;
+    column-gap: 1em;
+  }
+
+  #remove-product-form .pr-delete-btn {
+    grid-column: 2;
+    grid-row: 1;
+  }
+
+  #remove-product-form .pr-item .pr-code-field {
+    grid-column: 1;
+    grid-row: 2;
+  }
+
+  #remove-product-form .pr-item .pr-amount-field {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
 }
 
 @media screen and (min-width: 39.375em) { /* 630px/16px */
@@ -615,6 +703,28 @@ h4 {
     padding: 3em 4em 3em 2em;
   }
 
+  /* ---------- REMOVE PRODUCT PAGE STYLES ---------- */
+
+ 
+
+  #remove-product-form .pr-item {
+    padding: 1em 1.5em;
+
+    grid-template-columns: 5fr 3fr 1fr;
+    column-gap: 2em;
+  }
+
+  #remove-product-form .pr-delete-btn {
+    margin-top: 1.5em;
+
+    grid-column: 3;
+    grid-row: 2;
+    align-self: center;
+  }
+
+  #remove-product-form .pr-delete-btn .icon {
+    width: 1.8em;
+  }
 }
 
 @media screen and (min-width: 45.625em) { /* 730px/16px */ 
@@ -652,6 +762,18 @@ h4 {
   #home-inventory-actions-list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  /* ---------- REMOVE PRODUCT PAGE STYLES ---------- */
+
+  #remove-product-form {
+    width: 698px;
+    margin: auto;
+  }
+
+  #remove-product-form .pr-item {
+    grid-template-columns: max-content max-content 1fr ;
+  
   }
 
 }
